src/static/room.css
/* ... */
#load-wrapper, #load-wrapper .load-wrapper-inner {
  -webkit-transition: background 0.5s, color 0.5s,
                      opacity 1s, box-shadow 0.1s;
  transition: background 0.5s, color 0.5s,
              opacity 1s, box-shadow 0.1s;
}
#load-wrapper hr {
  margin: 10px 0;
  border: 1px solid black;
}

#load-wrapper .content-box {
  text-align: left;
}
#load-wrapper #loading-messages, #load-wrapper #splash-messages,
#load-wrapper .wait, #load-wrapper .note {
  margin-top: 10px;
}
#load-wrapper .wait {
  font-weight: bold;
}

#load-wrapper #load-wrapper-close {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  border: none;
  padding: 0;
  outline-offset: -1px;
  visibility: hidden;
}
#load-wrapper #load-wrapper-close img {
  display: block;
  width: 1.2em;
  height: 1.2em;
}
#load-wrapper .load-wrapper-inner:hover #load-wrapper-close {
  visibility: visible;
}

#load-wrapper.busy .load-wrapper-inner {
  box-shadow: 0 0 30px #808080;
}
#load-wrapper.busy #loading-messages {
  display: none;
}

.note {
  display: table;
}
.note > strong, .note > span {
  display: table-cell;
}
.note > :not(:last-child) {
  padding-right: 0.35em;
}

#errors {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10000;
  background: rgba(255, 255, 255, 0.5);
  text-align: center;
  overflow: auto;
}
#errors .error-box {
  display: inline-block;
  text-align: left;
  margin: 30px auto;
}
.error-box {
  border: 5px solid red;
  padding: 5px;
  background: white;
  color: black;
}
.error-box h2, .error-box p, .error-box hr, .error-box pre {
  margin: 5px 0;
}
.error-box hr {
  border: 1px solid black;
}
.error-box .bottom {
  text-align: right;
}
.error-box .bottom .dismiss {
  color: #c00000;
}
.error-box .bottom .reload {
  color: #008000;
}

#load-wrapper .error-box {
  margin-top: 10px;
}

.indent {
  display: block;
  margin-left: 1em;
}

.hidden {
  display: inline-block;
  overflow: hidden;
  width: 0;
  height: 0;
  opacity: 0;
}

.message > .line {
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: baseline;
  align-items: baseline;
}
.message.ping > .line {
  background: #ffffc0;
}
.message > .line .time-wrapper {
  display: inline-block;
}
.message > .line .nick-wrapper {
  -webkit-flex-shrink: 0;
  flex-shrink: 0;
}
.message > .line .nick-wrapper .nick {
  display: inline-block;
}
.message > .line .nick-wrapper .nick::after,
.message > .line .time-wrapper::after,
.message > .line .content .strut::after {
  /* HACK: Abusing the un-selectability of pseudoelements */
  content: " ";
  display: inline-block;
  width: 0;
}
.message > .line time {
  display: inline-block;
  position: absolute;
  left: 0;
  width: 3.5em;
  text-align: center;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
}
.message:not(.ping) > .line time {
  color: #808080;
}
.message > .line time a {
  color: inherit;
}
.message > .line .content {
  min-width: 0;
}
.message > .line .content .message-text {
  display: block;
  padding: 1px 0 1px 0.25em;
}
.message.emote > .line .content .message-text {
  padding-right: 0.25em;
}
/* HACK: Make embeds extend into the padding
 * For .embed-first, a negative top margin seems not to affect the embed (or
 * anything at all), so we transform the embed up instead. */
.message > .line .content .message-text .embed-outer.block.embed-first {
  -webkit-transform: translateY(-1px);
  transform: translateY(-1px);
  margin: 0;
}
.message > .line .content .message-text .embed-outer.block.embed-first +
.embed-outer.block {
  margin-top: 0;
}
.message > .line .content .message-text .embed-outer.block.embed-last {
  margin-bottom: -1px;
}
.message > .line .content .message-text
.embed-outer.block.embed-first.embed-last {
  margin-bottom: -2px;
}
.message > .line .content .message-text .embed-inline.embed-first {
  margin-top: -1px;
}
.message > .line .content .message-text .embed-inline.embed-last {
  margin-bottom: -1px;
}

/* Keep in sync with copy formatting in main.js */
.message-text {
  white-space: pre-wrap;
  word-wrap: break-word;
}
.message-text .block {
  display: block;
}
.message-text .mention, .message-text a {
  unicode-bidi: embed;
}
.message-text .smiley {
  font-weight: bold;
}
.message-text .sigil {
  color: #808080;
}
.message-text .sigil.false {
  color: inherit;
}
.message-text .emph, .message-text .emph-before,
.message-text .emph-after {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  letter-spacing: normal;
}
.message-text .emph.emph-1 {
  font-style: italic;
}
.message-text .emph.emph-2 {
  font-weight: bold;
}
.message-text .emph.emph-3 {
  font-variant: small-caps;
}
.message-text .emph.emph-4 {
  letter-spacing: 0.15em;
}
.message-text .heading-line {
  font-weight: bold;
}
.message-text .quote-line {
  font-style: italic;
}
.message-text .monospace {
  background: #f0f0f0;
}
.message-text .monospace.block {
  white-space: pre;
  overflow: auto;
}
.message-text .hidden.whitespace {
  display: block;
}

.message-text .embed-outer {
  margin: 1px 0;
}
.message-text .embed-outer.embed-inline {
  display: inline-block;
  margin: 0;
}
.message-text .embed-outer.embed-first {
  margin-top: 0;
}
.message-text .embed-outer.embed-last {
  margin-bottom: 0;
}
.message-text .embed-group {
  display: inline-block;
}
.message-text .embed-inner {
  display: inline-block;
  vertical-align: top;
  border: 1px solid #808080;
  color: black;
  background: white;
  margin-right: 1px;
}
.message-text .embed-outer.embed-inline .embed-inner {
  vertical-align: baseline;
  margin: 0;
}

.message > .replies {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  border-left: 2px solid #c0c0c0;
  padding: 2px 0 0 8px;
}
.message > .replies:empty {
  display: none;
}
.message.input-host > .replies {
  /* Override inline style set by JS */
  border-left-color: #808080 !important;
}

.message + .message {
  margin-top: 2px;
}
/* ... */

